--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1124,7 +1124,7 @@
     "opening-operation": "Öffnung",
     "operating-system": "Sistema Operativo",
     "operation": "Operation",
-    "operation-export": "Operación exportación",
+    "operation-export": "Betrieb Export",
     "operator": "Bediener",
     "option": "Option",
     "optional": "optional",
@@ -1226,7 +1226,7 @@
     "plugin-update": "Aktualliesierung des Plugins %pluginName% auf Version %version%",
     "plugins": "Plugins",
     "plugins-p": "Plugins ermöglichen das Hinzufügen neuer Funktionen. Aktiviere die, die du jetzt benötigst, oder mache es später im Administratormenü.",
-    "plugins-required": "Plugins requeridos",
+    "plugins-required": "Erforderliche Plugins",
     "points": "Punkte",
     "points-of-interest": "Sehenswürdigkeiten",
     "port": "Puerto",
@@ -1761,7 +1761,7 @@
     "wizard": "Asistent",
     "wizard-p": "Füllen Sie dieses Formular zu Ihrem Unternehmen aus, um die Konfiguration abzuschließen.",
     "wizard-plugins": "Ein Plugin ist eine Ergänzung, die neue Funktionalitäten hinzufügt. Wählen Sie die Plugins aus, die Sie sofort aktivieren möchten, oder tun Sie dies später über die Systemsteuerung.",
-    "work-certification": "Certificación",
+    "work-certification": "Zertifizierung",
     "work-events": "Arbeitsevents",
     "working-hours": "Arbeitszeit",
     "works": "Arbeiten",
@@ -1775,7 +1775,7 @@
     "years": "Jahre",
     "yes": "wenn",
     "yesterday": "Gestern",
-    "you-can-sort-images": "Puedes ordenar las imágenes arrastrándolas",
+    "you-can-sort-images": "Sie können die Bilder ziehen und sortieren.",
     "you-cant-delete-primary-variant": "Sie können die Hauptvariante des Produkts nicht löschen",
     "you-sent-a-audio": "D",
     "you-sent-a-document": "Sie haben ein Dokument gesendet",
