--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -92,7 +92,7 @@
     "allow-sale-without-stock-n": "Allow out-of-stock sale on new products",
     "allow-update": "Allow update",
     "already-installed": "Already installed",
-    "already-installed-p": "El programa ya está instalado",
+    "already-installed-p": "Program already installed",
     "always-to-company-email": "Always to the company email",
     "amount": "Amount",
     "amount-without-discount": "Amount without discount",
@@ -590,11 +590,11 @@
     "es-tax-regime-general": "General Regime",
     "es-tax-regime-gold": "Special regime for investment gold",
     "es-tax-regime-group-entities": "Special regime of the group of entities",
-    "es-tax-regime-one-stop-shop-ioss": "One Stop Shop IOSS tax regime",
-    "es-tax-regime-one-stop-shop-oss": "es-tax-regime-one-stop-shop-oss",
+    "es-tax-regime-one-stop-shop-ioss": "IOSS One Stop Shop tax regime",
+    "es-tax-regime-one-stop-shop-oss": "OSS One Stop Shop tax regime",
     "es-tax-regime-simplified": "Simplified Regime",
     "es-tax-regime-special-retail-traders": "Special retail traders tax regime",
-    "es-tax-regime-special-small-business": "Special small business tax regime",
+    "es-tax-regime-special-small-business": "Special tax regime for small business",
     "es-tax-regime-surcharge": "Equivalence surcharge",
     "es-tax-regime-telecom": "Special regimes applicable to telecommunications, radio broadcasting or television services and those provided electronically",
     "es-tax-regime-travel": "Special scheme for travel agents",
@@ -1690,8 +1690,8 @@
     "updater": "Updater",
     "updates-available": "Updates Available",
     "updates-available-p": "There are updates available for FacturaScripts. Please click on the updater and download the new version. Updates fix bugs and add new features.",
-    "updates-beta-warning": "Actualizaciones beta activadas",
-    "updates-beta-warning-p": "⚠️ Tiene activadas las actualizaciones beta. Estas actualizaciones no han sido probadas y solamente se recomiendan en instalaciones de prueba.",
+    "updates-beta-warning": "Beta updates enabled",
+    "updates-beta-warning-p": "⚠️ Beta updates are enabled. These updates have not been tested and are only recommended for test installations.",
     "updating-attached-relations": "Updating attached file counters",
     "upload-file": "Upload file",
     "uploaded-at": "Uploaded at",
@@ -1775,7 +1775,7 @@
     "years": "Years",
     "yes": "Yes",
     "yesterday": "Yesterday",
-    "you-can-sort-images": "Puedes ordenar las imágenes arrastrándolas",
+    "you-can-sort-images": "You can sort the images by dragging them",
     "you-cant-delete-primary-variant": "You cannot delete the main variant of the product",
     "you-sent-a-audio": "You sent a sound",
     "you-sent-a-document": "You sent a document",
