--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -819,7 +819,7 @@
     "invalid-iso-code": "Código ISO '%iso-code%' ez da zuzena",
     "invalid-number": "Zenbaki baliogabea: %number%",
     "invalid-request": "Eskaera baliogabea",
-    "invalid-token": "Token no válido",
+    "invalid-token": "Token baliogabea",
     "invalid-token-p": "El token de acceso para el archivo %file% no es válido o ha caducado",
     "invalid-user-can-permission": "Baimen baliogabea: %permission%. Eskuragarri dauden baimenak atzitu, ezabatu, esportatu, inportatu, eguneratu eta jabe bakarraren datuak dira.",
     "invalid-web": "Web helbide baliogabea",
@@ -1068,7 +1068,7 @@
     "no-gaps-found": "Ez da hutsunerik aurkitu",
     "no-invoice": "Fakturarik gabe",
     "no-outstanding-amount": "Ez dago zenbatekorik zain",
-    "no-plugins-installed": "No hay plugins instalados",
+    "no-plugins-installed": "Pluginik ez daude instaladoak",
     "no-print-permission": "Ez duzu inprimatzeko edo esportatzeko baimenik",
     "no-reference": "Erreferentziarik gabe",
     "no-selected-item": "Ez da elementurik aukeratu",
@@ -1199,7 +1199,7 @@
     "phones": "Telefonoak",
     "php-extension-needed": "PHP-ren konfigurazioan %extension% luzapena behar da",
     "php-extension-not-found": "%extension% PHP gehigarria instalatu gabe duzu.",
-    "php-extensions": "Extensiones PHP",
+    "php-extensions": "PHP luzapenak",
     "php-extensions-required": "Extensiones PHP requeridas",
     "php-support-end": "PHP %current%-(r)en laguntza laster amaituko da. PHP %min% bertsiora eguneratu mesedez.",
     "php-version-too-new": "%min_version% eta %max_version% artean PHP bertsio bat erabiltzea gomendatzen da. Une honetan, %version% duzu.",
@@ -1531,7 +1531,7 @@
     "subtotal": "Subtotala",
     "subtract": "Kendu",
     "success": "Arrakasta",
-    "successive-tract": "successive-tract",
+    "successive-tract": "hurrenkera",
     "sum": "Batuketa",
     "sum-netos-line-tax-must-be": "BEZ lerroen neto-en batura %lineNet% izan beharko luke.",
     "sum-total-line-tax-must-be": "BEZ lerroen BEZ totalen batura hau izan behar du: %lineTotalTax%",
