--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -820,7 +820,7 @@
     "invalid-number": "Nombre incorrect : %number%",
     "invalid-request": "Requête incorrecte",
     "invalid-token": "Jeton non valide",
-    "invalid-token-p": "El token de acceso para el archivo %file% no es válido o ha caducado",
+    "invalid-token-p": "Le token d'accès pour le fichier %file% n'est pas valide ou a expiré",
     "invalid-user-can-permission": "Permission non valide : %permission%. Les autorisations disponibles sont access, delete, export, import, update et only-owner-data.",
     "invalid-web": "Dirección web no válida",
     "invoice": "facture",
@@ -1122,9 +1122,9 @@
     "opened": "Ouvert",
     "opening-acounting-completed": "Ouverture de l'exercice achevée",
     "opening-operation": "Apertura",
-    "operating-system": "Sistema Operativo",
+    "operating-system": "Système d'exploitation",
     "operation": "Operación",
-    "operation-export": "Operación exportación",
+    "operation-export": "Opération d'exportation",
     "operator": "Opérateur",
     "option": "option",
     "optional": "Optionnel",
@@ -1440,7 +1440,7 @@
     "serierb": "Série RB",
     "series": "séries",
     "server": "serveur:",
-    "server-accepts-filesize": "Tamaño máx. subida archivos",
+    "server-accepts-filesize": "Taille max. de téléchargement des fichiers",
     "server-software": "Logiciel du serveur",
     "service": "Service",
     "services": "Services",
@@ -1761,7 +1761,7 @@
     "wizard": "Assistant",
     "wizard-p": "Remplissez ce formulaire au sujet de votre entreprise pour achever la configuration.",
     "wizard-plugins": "Un module ajoute des fonctionnalités. Sélectionnez les modules que vous souhaitez activer immédiatement. Vous pourrez toujours le faire ultérieurement via le Panneau d'administration.",
-    "work-certification": "Certificación",
+    "work-certification": "Certification",
     "work-events": "Événements de travail",
     "working-hours": "Heures de travail",
     "works": "Emplois",
@@ -1775,7 +1775,7 @@
     "years": "Années",
     "yes": "Si",
     "yesterday": "Hier",
-    "you-can-sort-images": "Puedes ordenar las imágenes arrastrándolas",
+    "you-can-sort-images": "Vous pouvez trier les images en les faisant glisser",
     "you-cant-delete-primary-variant": "Vous ne pouvez pas supprimer la variante principale du produit",
     "you-sent-a-audio": "Vous avez envoyé un audio",
     "you-sent-a-document": "Vous avez envoyé un document",
