--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -573,8 +573,8 @@
     "error-write-cert": "Erro ao escribir o certificado",
     "errors": "Erros",
     "es_EC": "Español (Ecuador)",
-    "es-tax-exception-art-14": "es-tax-exception-art-14",
-    "es-tax-exception-art-7": "es-tax-exception-art-7",
+    "es-tax-exception-art-14": "excepción fiscai art. 14",
+    "es-tax-exception-art-7": "excepción fiscai art. 7",
     "es-tax-exception-e1": "España: excepción polo artigo 20 da Ley do IVE",
     "es-tax-exception-e2": "España: excepción polo artigo 21 da Ley do IVE",
     "es-tax-exception-e3": "España: excepción polo artigo 22 da Ley do IVE",
@@ -820,7 +820,7 @@
     "invalid-number": "Número non válido: %number%",
     "invalid-request": "Petición non válida",
     "invalid-token": "Token no válido",
-    "invalid-token-p": "El token de acceso para el archivo %file% no es válido o ha caducado",
+    "invalid-token-p": "O token de acceso para o arquivo %file% non é válido ou caducou",
     "invalid-user-can-permission": "Permiso non válido: %permission%. Os permisos dispoñibles son access, delete, export, import, update e only-owner-data.",
     "invalid-web": "Enderezo web non válido",
     "invoice": "Factura",
@@ -1199,7 +1199,7 @@
     "phones": "puntos",
     "php-extension-needed": "Requirese a extensión %extension% na configuración de PHP",
     "php-extension-not-found": "Non tes a extensión %extension% de PHP instalada.",
-    "php-extensions": "Extensiones PHP",
+    "php-extensions": "Extensións PHP",
     "php-extensions-required": "Extensións PHP requiridas",
     "php-support-end": "O soporte para PHP %current% rematará pronto. Por favor, actualiza PHP á versión %min% ou superior.",
     "php-version-too-new": "Recoméndase usar unha versión de PHP entre a %min_version% e a %max_version%. Actualmente tes a %version%",
@@ -1226,7 +1226,7 @@
     "plugin-update": "Actualización do plugin %pluginName% á versión %version%",
     "plugins": "Plugins",
     "plugins-p": "Os  plugins permiten engadir novas funcións. Activa os que necesites agora, ou ben faino cando queiras desde o menú administrador.",
-    "plugins-required": "Plugins requeridos",
+    "plugins-required": "Plugins requiridos",
     "points": "puntos",
     "points-of-interest": "Puntos de interese",
     "port": "Porto",
@@ -1691,7 +1691,7 @@
     "updates-available": "Actualizacións dispoñibles",
     "updates-available-p": "Hai actualizacións dispoñibles de FacturaScripts. Por favor, fai clic no actualizador e descarga a nova versión. As actualizacións corrixen fallos e engaden novas funcionalidades.",
     "updates-beta-warning": "Actualizaciones beta activadas",
-    "updates-beta-warning-p": "⚠️ Tiene activadas las actualizaciones beta. Estas actualizaciones no han sido probadas y solamente se recomiendan en instalaciones de prueba.",
+    "updates-beta-warning-p": "⚠️ Ten activadas as actualizacións beta. Estas actualizacións non foron probadas e só se recomiendan en instalacións de proba.",
     "updating-attached-relations": "Actualizando contadores de arquivos adxuntos",
     "upload-file": "Subir ficheiro",
     "uploaded-at": "Cargado en",
