--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -393,7 +393,7 @@
     "database": "Database",
     "database-error": "Errore di connessione al database",
     "database-error-pc": "🖥️ Si el programa está instalado en tu PC, probablemente se te haya olvidado activar MySQL o tenga problemas para activarse.",
-    "database-error-server": "🌎 si el programa está instalado en un servidor o hosting, probablemente hayas cambiado el usuario o contraseña de la base de datos, o hayas llegado a algún límite de uso del hosting.",
+    "database-error-server": "🌎 se il programma è installato su un server o hosting, probabilmente hai cambiato l'utente o la password del database, oppure hai raggiunto un limite di utilizzo dell'hosting.",
     "database-name-must-be-lowercase": "il-nome-del-database-deve-essere-maiuscolo",
     "date": "data",
     "date-in": "Data in",
@@ -1676,7 +1676,7 @@
     "unlink-install-ok": "Disinstallazione cancellata dal registro correttamente.",
     "unlock-entry": "Sblocca",
     "unpaid": "non pagato",
-    "unsafe-file": "Archivo no seguro",
+    "unsafe-file": "File non sicuro",
     "unsafe-file-p": "Per motivi di sicurezza impediamo i download di alcune tipologie di file, come questo: %file%",
     "until-accounting-entry": "Fino alla registrazione contabile",
     "until-date": "Fino a",
