--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -392,8 +392,8 @@
     "data-source": "Źródła danych",
     "database": "Baza danych",
     "database-error": "Błąd połączenia z bazą danych",
-    "database-error-pc": "🖥️ Si el programa está instalado en tu PC, probablemente se te haya olvidado activar MySQL o tenga problemas para activarse.",
-    "database-error-server": "🌎 jeśli program jest zainstalowany na serwerze lub w hostingu, prawdopodobnie zmieniłeś użytkownika lub hasło bazy danych albo osiągnąłeś jakiś limit użytkowania hostingu.",
+    "database-error-pc": "🖥️ Jeśli program jest zainstalowany na twoim komputerze, prawdopodobnie zapomniałeś aktywować MySQL lub masz problemy z jego aktywacją.",
+    "database-error-server": "🌎 jeśli program jest zainstalowany na serwerze lub w hostingu, prawdopodobnie zmieniłeś użytkownika lub hasło bazy danych, albo osiągnąłeś jakiś limit użytkowania hostingu.",
     "database-name-must-be-lowercase": "Nazwa bazy danych musi być pisana małymi literami",
     "date": "Data",
     "date-in": "Data wejścia",
@@ -1226,7 +1226,7 @@
     "plugin-update": "Aktualizacja wtyczki %pluginName% do wersji %version%",
     "plugins": "Wtyczki",
     "plugins-p": "Wtyczki umożliwiają dodawanie nowych funkcji. Aktywuj te, które potrzebujesz teraz, lub zrób to, gdy chcesz z menu administratora.",
-    "plugins-required": "Plugins requeridos",
+    "plugins-required": "Wymagane wtyczki",
     "points": "Punkty",
     "points-of-interest": "Punkty zainteresowania",
     "port": "Port",
@@ -1647,7 +1647,7 @@
     "two-factor-auth-disable": "Dezaktywuj uwierzytelnianie dwuetapowe",
     "two-factor-auth-disabled": "Dwustopniowa weryfikacja została wyłączona",
     "two-factor-auth-enable": "Activar autenticación en 2 pasos",
-    "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
+    "two-factor-auth-enabled": "Autoryzacja dwuetapowa włączona",
     "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
     "two-factor-code": "Kod dwóch czynników",
     "two-factor-enabled": "Aktywuj uwierzytelnianie dwuskładnikowe",
@@ -1726,7 +1726,7 @@
     "vat-regularization": "Regulacja VAT",
     "vehicle": "Pojazd",
     "verified": "Zweryfikowany",
-    "verify": "Verificar",
+    "verify": "Weryfikuj",
     "version": "Wersja",
     "video": "Video",
     "vies-check-success": "Numer '%vat-number%' jest zarejestrowany w systemie VIES",
