--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1644,7 +1644,7 @@
     "try-again-later": "T",
     "tuesday": "terça-feira",
     "two-factor-auth": "Autenticação em 2 etapas",
-    "two-factor-auth-disable": "Desactivar autenticación en 2 pasos",
+    "two-factor-auth-disable": "Desativar autenticação em 2 passos",
     "two-factor-auth-disabled": "Autenticação em 2 passos desativada",
     "two-factor-auth-enable": "Ativar autenticação em 2 passos",
     "two-factor-auth-enabled": "Autenticação em 2 etapas ativada",
@@ -1676,7 +1676,7 @@
     "unlink-install-ok": "Instalação excluída do registro corretamente.",
     "unlock-entry": "Desbloquear",
     "unpaid": "Não pago",
-    "unsafe-file": "Archivo no seguro",
+    "unsafe-file": "Arquivo não seguro",
     "unsafe-file-p": "Por motivos de seguridad impedimos las descargas de algunos tipos de archivos, como este: %file%",
     "until-accounting-entry": "Até entrada contábil",
     "until-date": "Até a data",
