--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -393,7 +393,7 @@
     "database": "Base de dados",
     "database-error": "Erro ao conectar à base de dados",
     "database-error-pc": "🖥️ Si el programa está instalado en tu PC, probablemente se te haya olvidado activar MySQL o tenga problemas para activarse.",
-    "database-error-server": "🌎 si el programa está instalado en un servidor o hosting, probablemente hayas cambiado el usuario o contraseña de la base de datos, o hayas llegado a algún límite de uso del hosting.",
+    "database-error-server": "🌎 se o programa está instalado em um servidor ou hosting, provavelmente você mudou o usuário ou senha do banco de dados, ou atingiu algum limite de uso do hosting.",
     "database-name-must-be-lowercase": "O nome da base de dados deve estar em minúsculas",
     "date": "Data",
     "date-in": "Data em",
@@ -1761,7 +1761,7 @@
     "wizard": "Assistente",
     "wizard-p": "Preencha este formulário sobre o seu negócio para concluir a configuração.",
     "wizard-plugins": "O assistente de plugins",
-    "work-certification": "Certificación",
+    "work-certification": "Certificação",
     "work-events": "Eventos de trabalho",
     "working-hours": "Horário de trabalho",
     "works": "Trabalhos",
