--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1113,7 +1113,7 @@
     "only-closed": "Només tancats",
     "only-insert": "Sólo añadir",
     "only-owner-data": "only-owner-data",
-    "only-owner-data-p": "El usuario solamente podrá ver registros que haya creado él o que tenga asignados (como usuario o agente)",
+    "only-owner-data-p": "Marcant l'opció de mostrar únicament registres de l'usuari, només podrà veure registres que hagi creat ell o que tinga assignats (com a usuari o agent)",
     "only-pending": "only-pending",
     "only-suspended": "Només els suspesos",
     "open": "Obri",
@@ -1124,7 +1124,7 @@
     "opening-operation": "Obertura",
     "operating-system": "Sistema Operativo",
     "operation": "Operació",
-    "operation-export": "Operación exportación",
+    "operation-export": "Operació d'exportació",
     "operator": "Operador",
     "option": "Opció",
     "optional": "opcional",
@@ -1531,7 +1531,7 @@
     "subtotal": "Subtotal",
     "subtract": "Restar",
     "success": "success",
-    "successive-tract": "successive-tract",
+    "successive-tract": "tracte successiu",
     "sum": "Suma",
     "sum-netos-line-tax-must-be": "La suma dels nets de les llínees del IVA deuria ser: %lineNet%",
     "sum-total-line-tax-must-be": "La suma dels totals del IVA de les llínees del IVA ha de ser: %lineTotalTax%",
@@ -1761,7 +1761,7 @@
     "wizard": "Assistent",
     "wizard-p": "Ompli este formulari sobre el teu negoci per a acabar la configuració",
     "wizard-plugins": "Un plugin és un complement que afig noves funcionalitats. Selecciona els plugins que vulgues activar immediatament, o fes-ho més tard des del panell de control.",
-    "work-certification": "Certificación",
+    "work-certification": "Certificació",
     "work-events": "Esdeveniments de treball",
     "working-hours": "Horari de treball",
     "works": "Treballs",
