--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1440,7 +1440,7 @@
     "serierb": "Serie RB",
     "series": "Series",
     "server": "Servidor",
-    "server-accepts-filesize": "Tamaño máx. subida archivos",
+    "server-accepts-filesize": "Maximální velikost nahrání souborů",
     "server-software": "Software del servidor",
     "service": "Servicio",
     "services": "Servicios",
@@ -1761,7 +1761,7 @@
     "wizard": "Asistente",
     "wizard-p": "Rellene este formulario sobre su negocio para terminar la configuración.",
     "wizard-plugins": "Un plugin es un complemento que añade nuevas funcionalidades. Selecciona los plugins que quieras activar inmediatamente, o hazlo más tarde desde el panel de control.",
-    "work-certification": "Certificación",
+    "work-certification": "Certifikace",
     "work-events": "Pracovní události",
     "working-hours": "Pracovní hodiny",
     "works": "Trabajos",
